<resources>
    <string name="app_name">Medical Calculations</string>
    <string name="splash_1">Paediatric</string>
    <string name="splash_2">Nursing</string>
    <string name="splash_3">Calculations</string>
    <string name="als_paed">PaedALS</string>
    <string name="age_years">Years</string>
    <string name="age_months">Months</string>
    <string name="calculations">Resuscitation</string>
    <string name="calculations2">Calculations</string>
    <string name="weight_actual">Weight.</string>
    <string name="tube_size_uc">Tube size uncuffed - mm I.D.: </string>
    <string name="tube_cuffed">Tube size cuffed - mm I.D.: </string>
    <string name="plus_one_size">Plus half a size above and below.</string>
    <string name="Weight_calc">Weight Calculation (kg)</string>
    <string name="actual_weight">Enter Actual Weight (kg)</string>
    <string name = "number" translatable="false">0.0</string>
    <string name="int_number" translatable="false">0</string>
    <string name="energy">DC Shock (Joules) 4 J/kg:</string>
    <string name="crystalloid">Crystalloid Fluids 20ml/kg (ml)</string>
    <string name="adrenaline">Adrenaline (1:10,000) 10 mcg/kg (mcg)</string>
    <string name="amiodarone">Amiodarone 5 mg/kg iv/io (mg)</string>
    <string name="adrenaline_timing">Every 3 to 5 minutes</string>
    <string name="amiodarone_timing">After third and fifth DC Shock</string>
    <string name="glucose">Glucose 5 ml/kg 10%</string>
    <string name="hypo">If severely hypoglycaemic</string>
    <string name="menu">Menu</string>
    <string name="menu_link_bmi">Menu link bmi</string>
    <string name="menu_web_index">Menu web index</string>
    <string name="menu_calcs_index">Menu calcs index</string>
    <string name="menu_flacc_index">Menu flacc index</string>
    <string name="menu_fluids_index">Menu fluids index</string>
    <string name="menu_bsa_index">Menu bsa index</string>
    <string name="menu_news2_index">Menu news2 index</string>
    <string name="menu_temp_index">Menu temp index</string>
    <string name="abg_description">abg</string>
    <string name="fluids_description">fluids</string>
    <string name="websites_description">useful websites</string>
    <string name="paed_calcs_description_bmi">paed calcs description bmi</string>
    <string name="paed_calcs_description_news2">paed calcs description news2</string>
    <string name="paed_calcs_description">Paed calcs description</string>
    <string name="paed_calcs_description_bsa">Paed calcs description bsa</string>
    <string name="menu_link">Menu Link</string>
    <string name="front_image">front picture</string>
    <string name="start_image">start image</string>
    <string name="fluid_calculations">Fluid Infusions</string>
    <string name="time_hours">Hours</string>
    <string name="time_mins">Minutes</string>
    <string name="volume">Volume</string>
    <string name="vol_mls">Infusion Volume (ml): </string>
    <string name="time_in_hours">Infusion Time in Hours: </string>
    <string name="time_in_minutes">Infusion Time in Minutes: </string>
    <string name="vol_per_minute">Infusion Rate (ml/min): </string>
    <string name="drops_crystalloid">Drops/Minute Crystalloid: </string>
    <string name="drops_colloid">Drops/Minute Colloid: </string>
    <string name="vol_per_hour">Infusion Rate (ml/hour): </string>
    <string name="or">Or</string>
    <string name="aim">aim</string>
    <string name="alsg">alsg</string>
    <string name="resus_council">resus council</string>
    <string name="useful">Useful</string>
    <string name="websites">Websites</string>
    <string name="calculate_link">calculate link</string>
    <string name="paediatric">Paediatric</string>
    <string name="conversion_label">Hours to Minutes Conversion</string>
    <string name="converted_time_mins">Minutes</string>
    <string name="hours">Hours</string>
    <string name="convert_weight">Convert weight</string>
    <string name="convert_height">Convert height</string>
    <string name="convert_bmi">Convert bmi</string>
    <string name="convert_image_bsa">Convert bsa</string>
    <string name="drops_microdrop">Drops/Minute Micro drop\n60 drops/ml: </string>
    <string name="conversion_metric">Metric Size Conversion</string>
    <string name="large_unit">Large\nUnit</string>
    <string name="small_unit">Small\nUnit</string>
    <string name="large_unit_labels">Kilograms(kg)g \ngrams(g)\nmilligrams(mg)\nmicrograms(mcg)</string>
    <string name="small_unit_labels">grams(g)\nmilligrams(mg)\nmicrograms(mcg)\nnanograms(ng)</string>
    <string name="dry_weights">Convert between kilograms,\ngrams, milligrams, micrograms\nand nanograms.</string>
    <string name="fluid_conversion">Convert between litres\nand millilitres.</string>
    <string name="small_unit_fluids_labels">Millilitres(ml)</string>
    <string name="large_unit_fluids_labels">Litres(l)</string>
    <string name="metric_measurement">Metric Measurement</string>
    <string name="conversion">Conversion</string>
    <string name="metric_measurement_conversion">Convert between Metres\nCentimetres and\nMillimetres</string>
    <string name="metres">Metres</string>
    <string name="centimetres">Centimetres</string>
    <string name="millimetres">Millimetres</string>
    <string name="bmi_calculator">Body Mass Index</string>
    <string name="calculator">Calculator</string>
    <string name="convert_imperial_weight">Convert Stones and Pounds\nTo Kilograms</string>
    <string name="convert_imperial_height">Convert Feet and Inches\nTo Metres</string>
    <string name="pounds">Pounds</string>
    <string name="stones">Stones</string>
    <string name="kilogrammes">Kilogrammes</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="bmi">B.M.I.</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="height_m">Height(m)</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="bsa">Body Surface Area</string>
    <string name="height_cm">Height(cm)</string>
    <string name="bsa_m2">Body Surface \nArea metres sq.</string>
    <string name= "gcs_text">Glasgow Coma Scale</string>
    <string name="eye_opening">Eye Opening</string>
    <string name= "openSpontaneously">Spontaneously</string>
    <string name="to_speech">To Speech</string>
    <string name="to_pain">To Pain</string>
    <string name="no_response_eye">No Response eye</string>
    <string name="verbal_response">Verbal Response</string>
    <string name="orientated_A">Orientated  (Coos or babbles normally)</string>
    <string name="confused_A">Confused  (Irritable or continually cries)</string>
    <string name="inappropriate_words_A">Inappropriate words  (Cries in pain)</string>
    <string name="incomprehensible_words_A">Incomprehensible words  (Moans in pain)</string>
    <string name="no_response_v">No response verbal</string>
    <string name="motor_response">Motor Response</string>
    <string name="obeys_commands">Obeys commands</string>
    <string name="localises_pain">Localises pain</string>
    <string name="withdraws_from_pain">Withdraws from pain</string>
    <string name="flexion_to_pain">Flexion to pain</string>
    <string name="extension_to_pain">Extension to pain</string>
    <string name="no_response_motor">No response motor</string>
    <string name="less_than_two_years">(Less than two years old in parenthesis)</string>
    <string name="gcs_is">GCS  is:-</string>
    <string name="out_of_15">/15</string>
    <string name="score_link">score link</string>
    <string name="degrees_f">Deg F</string>
    <string name="degrees_c">Deg C</string>
    <string name="temp_conv_header">Temperature Scale</string>
    <string name="temp_conv_header2">Conversion</string>
    <string name="enter_fahrenheit">Enter Degrees Fahrenheit</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="enter_centigrade">Enter Degrees Centigrade</string>
    <string name="centigrade">Centigrade</string>
    <string name="convert_f_to_c">Convert F to C</string>
    <string name="convert_c_to_f">Convert C to F</string>
    <string name="flacc_header">FLACC</string>
    <string name="flacc_intro">Primarily used for infants but can be used effectively for anyone who cannot respond normally i.e. adults in critical care.</string>
    <string name="flacc_intro2">Watch child (adult) for 1 – 5 minutes.\nPick the most appropriate description for each section.\nWhen complete, push score button.</string>
    <string name="face_section_text">Face</string>
    <string name="no_expression_smile">No particular expression or smile.</string>
    <string name="grimace">Occasional grimace or frown, withdrawn, disinterested.</string>
    <string name="clenched_jaw">Frequent to constant quivering chin, clenched jaw.</string>
    <string name="legs_section_text">Legs</string>
    <string name="activity_section">Activity</string>
    <string name="cry_section_text">Cry</string>
    <string name="consolability_section_text">Consolability</string>
    <string name="relaxed">Normal position or relaxed.</string>
    <string name="restless">Uneasy, restless, tense.</string>
    <string name="kicking">Kicking, or legs drawn up.</string>
    <string name="lying_quietly">Lying quietly, normal position, moves easily.</string>
    <string name="squirming">Squirming, shifting back and forth, tense,</string>
    <string name="arched">Arched, rigid or jerking.</string>
    <string name="no_cry">No cry (awake or asleep).</string>
    <string name="moans">Moans or whimpers, occasional complaint.</string>
    <string name="crying_steadily">Crying steadily, screams or sobs, frequent complaints.</string>
    <string name="content">Content, relaxed.</string>
    <string name="distractible">Reassured by occasional touching, hugging or being talked to, distractible.</string>
    <string name="difficult_to_console">Difficult to console or comfort.</string>
    <string name="explain_score">Scores of 4 to 6 mean moderate pain or discomfort.\nScores of 7 or more mean severe pain or discomfort.\n(Max. 10)</string>
    <string name="flacc_score">Score</string>
    <string name="copyright">Merkel et al, 1997.</string>
    <string name="news2_head_text_1">News2</string>
    <string name="news2_head_text_2">National Early Warning Score (v2)</string>
    <string name="gcs_reveal_link">reveal gcs score</string>
    <string name="bmi_calculator_long_text">Body Mass Index Calculator</string>
    <string name="bsa_calculator_long_text">Body Surface Area Calculator</string>
    <string name="paed_calcs_long_text">Paediatric Resuscitation Calculations</string>

</resources>
